# mcptools

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: _config.yml  blog.md  index.md
examples/: demo_config.json
src/mcptools/: __init__.py  cli.py  handshake.py  jsonrpc.py
src/mcptools/config/: parser.py
src/mcptools/doctor/: checks.py
src/mcptools/inspect/: caller.py  server.py
src/mcptools/proxy/: interceptor.py  transport.py
src/mcptools/record/: recorder.py  replayer.py
src/mcptools/tui/: dashboard.py
tests/: test_call.py  test_cli.py  test_config_parser.py  test_doctor_integration.py  test_handshake.py  test_inspect_error_handling.py  test_json_output.py  test_jsonrpc.py  test_recorder_roundtrip.py  test_replayer.py  test_transport.py
